--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
-h2 {
-    color: red;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /*Respeitar a largura element pai*/
+    font-family: "Lato", sans-serif; 
 }
